# Food-Tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run.bat
backend/: cv_engine.py  database.py  main.py  nutrition_db.py
frontend/: app.js  index.html  styles.css
