[project]
name = "food-tracker"
version = "0.1.0"
description = "A Smart Food Photo Calorie & Macro Tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "ultralytics>=8.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=9.5.0",
    "numpy>=1.24.0",
]
